# kaledioscope

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  kaledio_lang.cpp  lang_architect.md
src/: ast.cpp  ast.h  codegen.cpp  codegen.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h
